--- a/templates/v2ray/common_sider.html
+++ b/templates/v2ray/common_sider.html
@@ -6,8 +6,12 @@
             <span>{{ _('system status') }}</span>
         </a-menu-item>
         <a-menu-item key="{{ url_for('v2ray.accounts') }}">
-            <a-icon type="user"></a-icon>
+            <a-icon type="database"></a-icon>
             <span>{{ _('accounts') }}</span>
+        </a-menu-item>
+        <a-menu-item key="{{ url_for('v2ray.users') }}">
+            <a-icon type="user"></a-icon>
+            <span>{{ _('users') }}</span>
         </a-menu-item>
         <a-menu-item key="{{ url_for('v2ray.setting') }}">
             <a-icon type="setting"></a-icon>
