修改客户模型 修改客户模态窗

--- a/templates/v2ray/common_sider.html
+++ b/templates/v2ray/common_sider.html
@@ -9,9 +9,9 @@
             <a-icon type="database"></a-icon>
             <span>{{ _('accounts') }}</span>
         </a-menu-item>
-        <a-menu-item key="{{ url_for('v2ray.users') }}">
+        <a-menu-item key="{{ url_for('v2ray.customers') }}">
             <a-icon type="user"></a-icon>
-            <span>{{ _('users') }}</span>
+            <span>{{ _('customers') }}</span>
         </a-menu-item>
         <a-menu-item key="{{ url_for('v2ray.setting') }}">
             <a-icon type="setting"></a-icon>
@@ -64,6 +64,10 @@
         <a-menu-item key="{{ url_for('v2ray.accounts') }}">
             <a-icon type="user"></a-icon>
             <span>{{ _('accounts') }}</span>
+        </a-menu-item>
+        <a-menu-item key="{{ url_for('v2ray.customers') }}">
+            <a-icon type="user"></a-icon>
+            <span>{{ _('customers') }}</span>
         </a-menu-item>
         <a-menu-item key="{{ url_for('v2ray.setting') }}">
             <a-icon type="setting"></a-icon>
