现在可以对用户进行修改和删除了 //TO-DO 对用户增加时长 根据时间对是否启用进行判读

--- a/templates/v2ray/customer_modal.html
+++ b/templates/v2ray/customer_modal.html
@@ -13,7 +13,7 @@
         </a-row>
         <a-row>
             <a-form-item label="{{ _('uuid') }}">
-                <a-input v-model.trim="inModal.customer.uuid" required></a-input>
+                <a-input v-model.trim="inModal.customer.uuid" required disabled></a-input>
             </a-form-item>
         </a-row>
         <a-row>
