--- a/templates/common/qrcode_modal.html
+++ b/templates/common/qrcode_modal.html
@@ -1,21 +1,31 @@
 <a-modal id="qrcode-modal" v-model="qrModal.visible" :title="qrModal.title"
-         :closable="true" width="300px" :ok-text="qrModal.okText"
+         :closable="true" width="400px" :ok-text="qrModal.okText"
          cancel-text="{{ _('close') }}" :ok-button-props="{attrs:{id:'qr-modal-ok-btn'}}">
-    <canvas id="qrCode" style="width: 100%; height: 100%;"></canvas>
+    <a-tabs defaultActiveKey="1" type="card">
+        <a-tab-pane v-for="svr in servers" :tab="svr.remark" :key="svr.id">
+{#        <canvas id="qrCode" style="width: 100%; height: 100%;"></canvas>#}
+            <a-tabs @change="callback">
+                <a-tab-pane v-for="inb in inbounds" :tab="inb.port" :key="inb.id">
+                    [[ svr.address ]]:
+                    [[ inb.port ]]
+                </a-tab-pane>
+            </a-tabs>
+        </a-tab-pane>
+    </a-tabs>
 </a-modal>
 
 <script>
 
     const qrModal = {
         title: '',
-        content: '',
+        customer: null,
         okText: '',
         qrcode: null,
         clipboard: null,
         visible: false,
-        show: function (title='', content='', okText='{{ _('copy') }}') {
+        show: function (title='', customer=null, okText='{{ _('copy') }}') {
             this.title = title;
-            this.content = content;
+            this.customer = customer;
             this.okText = okText;
             this.visible = true;
             qrModalApp.$nextTick(() => {
@@ -42,9 +52,16 @@
     };
 
     const qrModalApp = new Vue({
+        delimiters: ['[[', ']]'],
         el: '#qrcode-modal',
         data: {
             qrModal: qrModal,
+            servers: {{ servers | safe }},
+            inbounds: {{ inbounds | safe }}
+        },
+        methods: {
+            callback: function (activeKey) {
+            }
         },
     });
 
