一些补充工作

--- a/templates/v2ray/common_sider.html
+++ b/templates/v2ray/common_sider.html
@@ -7,7 +7,7 @@
         </a-menu-item>
         <a-menu-item key="{{ url_for('v2ray.accounts') }}">
             <a-icon type="database"></a-icon>
-            <span>{{ _('accounts') }}</span>
+            <span>{{ _('ports list') }}</span>
         </a-menu-item>
         <a-menu-item key="{{ url_for('v2ray.customers') }}">
             <a-icon type="user"></a-icon>
