页面的一些更改 每日0点更新配置文件，使过期用户失效

--- a/templates/v2ray/accounts.html
+++ b/templates/v2ray/accounts.html
@@ -1,5 +1,5 @@
 {% extends 'v2ray/base.html' %}
-{% block title %}{{ _('accounts') }}{% endblock %}
+{% block title %}{{ _('ports list') }}{% endblock %}
 {% block head %}
     {{ super() }}
     <style>
