修复了端口页面的一个缺陷，完善了同步完后的显示

--- a/templates/common/qrcode_modal.html
+++ b/templates/common/qrcode_modal.html
@@ -61,7 +61,7 @@
         el: '#qrcode-modal',
         data: {
             qrModal: qrModal,
-            servers: {{ servers | safe }},
+            servers: {{ servers | default("''") | safe }},
             inbounds: {{ inbounds | safe }},
         },
         methods: {
