完善了订阅功能，但还剩下生成订阅链接的工作，新增了一些中文翻译，更改了版本号

--- a/templates/v2ray/common_sider.html
+++ b/templates/v2ray/common_sider.html
@@ -26,11 +26,11 @@
                 <a-icon type="link"></a-icon>
                 <span>{{ _('other') }}</span>
             </template>
-            <a-menu-item key="https://github.com/sprov065/v2-ui/">
+            <a-menu-item key="https://github.com/690933449/v2-ui/">
                 <a-icon type="github"></a-icon>
                 <span>Github</span>
             </a-menu-item>
-            <a-menu-item key="https://github.com/sprov065/v2-ui/issues">
+            <a-menu-item key="https://github.com/690933449/v2-ui/issues">
                 <a-icon type="exception"></a-icon>
                 <span>{{ _('report issue') }}</span>
             </a-menu-item>
@@ -39,7 +39,7 @@
                 <span>{{ _('tutorial') }}</span>
             </a-menu-item>
         </a-sub-menu>
-        <a-menu-item key="https://blog.sprov.xyz/go/support-paypal">
+        <a-menu-item key="">
             <a-icon type="like"></a-icon>
             <span>{{ _('donate') }}</span>
         </a-menu-item>
@@ -82,11 +82,11 @@
                 <a-icon type="link"></a-icon>
                 <span>{{ _('other') }}</span>
             </template>
-            <a-menu-item key="https://github.com/sprov065/v2-ui/">
+            <a-menu-item key="https://github.com/690933449/v2-ui">
                 <a-icon type="github"></a-icon>
                 <span>Github</span>
             </a-menu-item>
-            <a-menu-item key="https://github.com/sprov065/v2-ui/issues">
+            <a-menu-item key="https://github.com/690933449/v2-ui/issues">
                 <a-icon type="exception"></a-icon>
                 <span>{{ _('report issue') }}</span>
             </a-menu-item>
@@ -95,7 +95,7 @@
                 <span>{{ _('tutorial') }}</span>
             </a-menu-item>
         </a-sub-menu>
-        <a-menu-item key="https://blog.sprov.xyz/go/support-paypal">
+        <a-menu-item key="">
             <a-icon type="like"></a-icon>
             <span>{{ _('donate') }}</span>
         </a-menu-item>
